--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,14 @@
   }
 }
 
+@layer base {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+}
+
 html,
 body {
   max-width: 100vw;
